--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2503,5 +2503,84 @@ img {
     font-size: 18px;
   }
 }
+.slider {
+  background-color: #ffffff;
+}
+#slider {
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+}
+@media (max-width: 1223px) {
+  #slider {
+    height: 400px;
+  }
+}
+@media (max-width: 767px) {
+  #slider {
+    height: 300px;
+  }
+}
+.slide {
+  width: 100%;
+  height: 100%;
+}
+.sli-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  bottom: 30px;
+  left: calc(50% - 75px);
+}
+@media (max-width: 1223px) {
+  .sli-links {
+    bottom: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .sli-links {
+    bottom: 10px;
+  }
+}
+.sli-links .control-slide {
+  display: block;
+  width: 30px;
+  height: 6px;
+  margin: 0 10px;
+  background-color: #ffffff;
+  text-indent: -999px;
+  font-size: 0;
+}
+.sli-links .control-slide:hover {
+  cursor: pointer;
+}
+#prewbutton,
+#nextbutton {
+  display: block;
+  width: 60px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  text-indent: -999px;
+  opacity: 0.5;
+  z-index: 3;
+  outline: none !important;
+  background-color: inherit;
+  background: url('../img/left-new.svg') center no-repeat;
+}
+#prewbutton {
+  left: 0;
+}
+#nextbutton {
+  right: 0;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+#prewbutton:hover,
+#nextbutton:hover {
+  opacity: 1;
+}
 
 /*# sourceMappingURL=style.css.map */
