--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,23 +1,63 @@
 .slider {
   background-color: #ffffff;
-}
+  font-family: 'Montserrat Alternates', sans-serif;
+  color: #444444;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
 
-#slider-wrap {}
+  .slider__title {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .slide__review {
+    font-size: 1.1rem;
+    line-height: 1.5;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .slide__name {
+    display: block;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .slide__img {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+    border: 10px solid #cccccc;
+  }
+
+
+#slider-wrap {
+  position: relative;
+}
 #slider {
-	height:500px;
+  min-height: 400px;
+  max-width: 1140px;
+  margin: 0 auto;
 	overflow: hidden;
 	position:relative;
 	@media(max-width: @tablet-width-only) {
-		height: 400px;
+		min-height: 530px;
 	}
 	@media(max-width: @mobile-width-only) {
-		height: 300px;
+		min-height: 730px;
 	}
 }
 
 .slide {
-	width:100%;
-	height:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sli-links {
@@ -49,17 +89,17 @@
 }
 #prewbutton, #nextbutton {
 	display:block;
-	width:60px;
+	width:50px;
 	height:100%;
 	position:absolute;
 	top:0;
 	overflow:hidden;
 	text-indent:-999px;
-	opacity:0.5;
+	opacity:0.3;
 	z-index:3;
 	outline:none !important;
 	background-color: inherit;
-	background:url('../img/left-new.svg') center no-repeat;
+	background:url('../img/Arrow.svg') center no-repeat;
 }
 #prewbutton {
 	left:0;
@@ -70,4 +110,14 @@
 }
 #prewbutton:hover, #nextbutton:hover {
 	opacity:1;
+}
+@media (min-width: @tablet-width) {
+  padding-left: 80px;
+  padding-right: 80px;
+  .slider__title {
+    font-size: 2.9rem;
+  }
+}
+
+@media (min-width: @desktop-width) {}
 }
