--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,5 @@
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
 @import "blocks/slider.less";
+@import "blocks/inner.less";
+@import "blocks/price.less";
