--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2596,7 +2596,7 @@ img {
   .price .price-navigation .price-navigation__item {
     width: 48%;
   }
-  .price .price-navigation .price-navigation:nth-child(odd) {
+  .price .price-navigation .price-navigation__item:nth-child(odd) {
     margin-right: 4%;
   }
 }
