--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -102,7 +102,7 @@
     .price-navigation__item {
       width: 48%;
     }
-    .price-navigation:nth-child(odd) {
+    .price-navigation__item:nth-child(odd) {
       margin-right: 4%;
     }
   }
