--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2475,6 +2475,10 @@ img {
     font-size: 2.5rem;
   }
 }
+.price {
+  position: relative;
+  z-index: 0;
+}
 .price .price-navigation {
   position: relative;
   background-image: url("../img/test-2000x900.jpg");
@@ -2558,6 +2562,7 @@ img {
 .price .price-navigation .price-navigation__link {
   position: relative;
   display: block;
+  width: 100%;
   padding: 110px 40px 40px 40px;
   text-decoration: none;
   font-size: 16px;
@@ -2602,22 +2607,25 @@ img {
 }
 @media (min-width: 1224px) {
   .price .price-navigation .price-navigation__wrap {
-    max-width: 1140px;
+    max-width: 1170px;
     margin: 0 auto;
+    padding-top: 40px;
     padding-right: 15px;
     padding-left: 15px;
     padding-bottom: 30px;
   }
-  .price .price-navigation .price-navigation__list {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+  .price .price-navigation .price-navigation__title {
+    font-size: 24px;
+  }
+  .price .price-navigation .price-navigation__description {
+    margin-bottom: 40px;
+  }
+  .price .price-navigation .price-navigation__link {
+    padding: 110px 0px 30px 0px;
   }
   .price .price-navigation .price-navigation__item {
-    width: 100%;
-  }
-  .price .price-navigation .price-navigation__item {
+    width: calc(25% - 30px);
     margin-right: 30px;
-    padding: 30px 30px 30px 30px;
   }
   .price .price-navigation .price-navigation__item:nth-child(odd) {
     margin-right: 30px;
