--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,4 +1,6 @@
 .price {
+  position: relative;
+  z-index: 0;
 
 .price-navigation {
   position: relative;
@@ -68,6 +70,7 @@
   .price-navigation__link {
     position: relative;
     display: block;
+    width: 100%;
     padding: 110px 40px 40px 40px;
     text-decoration: none;
     font-size: 16px;
@@ -109,21 +112,25 @@
 
   @media (min-width: @desktop-width) {
     .price-navigation__wrap {
-      max-width: 1140px;
+      max-width: 1170px;
       margin: 0 auto;
+      padding-top: 40px;
       padding-right: 15px;
       padding-left: 15px;
       padding-bottom: 30px;
     }
-    .price-navigation__list {
-      flex-wrap: nowrap;
+    .price-navigation__title {
+      font-size: 24px;
+    }
+    .price-navigation__description {
+      margin-bottom: 40px;
+    }
+    .price-navigation__link {
+      padding: 110px 0px 30px 0px;
     }
     .price-navigation__item {
-      width: 100%;
-    }
-    .price-navigation__item {
+      width: calc(25% - 30px);
       margin-right: 30px;
-      padding: 30px 30px 30px 30px;
     }
     .price-navigation__item:nth-child(odd) {
       margin-right: 30px;
