--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,10 +1,10 @@
-.list-reset() {
+@mixin list-reset() {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.flex-mobile() {
+@mixin flex-mobile() {
   display: flex;
   flex-direction: column;
   align-items: center;
